crates/uitest/fixtures/ty/def/trait_const_default_bodies.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_const_default_bodies.fe
---
error[8-0000]: type mismatch
  ┌─ trait_const_default_bodies.fe:2:20
  │
2 │     const C: u32 = true
  │                    ^^^^ expected `u32`, but `bool` is given

error[8-0012]: undefined variable
  ┌─ trait_const_default_bodies.fe:6:20
  │
6 │     const D: u32 = missing()
  │                    ^^^^^^^ undefined variable `missing`
